fixing overflow y

--- a/mobileRes.css
+++ b/mobileRes.css
@@ -114,7 +114,7 @@
     .cards-container {
         min-height: 200vh;
         overflow-x: hidden;
-
+        overflow-y: visible;
     }
 
     .cards-container-header {
@@ -135,7 +135,7 @@
         min-height: 80%;
         width: 100%;
         gap: 30px;
-        overflow-x: hidden;
+        overflow-y: visible;
 
     }
 
@@ -168,6 +168,7 @@
         flex-wrap: wrap;
         height: 120vh;
         overflow-x: hidden;
+        overflow-y: visible;
 
     }
 
@@ -249,6 +250,7 @@
         width: 100%;
         gap: 15px;
         overflow-x: hidden;
+        overflow-y: visible;
 
     }
 
@@ -346,6 +348,7 @@
         height: 50%;
         width: 90%;
         overflow-x: hidden;
+        overflow-y: visible;
 
     }
 
@@ -371,6 +374,7 @@
         min-height: 300vh;
         width: 100vw;
         overflow-x: hidden;
+        overflow-y: visible;
 
     }
 
@@ -444,6 +448,7 @@
         height:20%;
         width: 90%;
         overflow-x: hidden;
+        overflow-y: visible;
 
     }
     .footer-upper-box > .the-half-circle{
@@ -486,6 +491,7 @@
         width: 80%;
        align-items: flex-start;
        overflow-x: hidden;
+       overflow-y: visible;
 
     }
     .footer-logo{
